# BrotherLabelPrinterControl-QL

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
brother_label_printer_control_ql/: cli.py  constants.py  conversion.py  devicedependent.py  exceptions.py  helpers.py  instructions.py  labels.py  models.py  output_helpers.py  raster.py  reader.py
brother_label_printer_control_ql/backends/: __init__.py  abstract.py  generic.py  helpers.py  linux_kernel.py  network.py  pyusb.py  retry_strategies.py  status.py
brother_label_printer_control_ql/cli/: __init__.py  analyse.py  discover.py  info.py  print.py  send.py
brother_label_printer_control_ql/cli/legacy/: brother_ql_analyse.py  brother_ql_create.py  brother_ql_debug.py  brother_ql_info.py  brother_ql_print.py
brother_label_printer_control_ql/control/: constants.py  errors.py  op_codes.py  outcome.py  response.py  status.py
brother_label_printer_control_ql/labels/: __init__.py  color.py  form_factor.py  label_options.py
brother_label_printer_control_ql/legacy/: brother_ql_analyse.py  brother_ql_create.py  brother_ql_debug.py  brother_ql_info.py  brother_ql_print.py
brother_label_printer_control_ql/utils/: elements_manager.py  hex.py  image_trafos.py  output_helpers.py  pixels.py
