[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brother_label_printer_control_ql"
version = "1.0"
description = "Python package to talk to Brother QL label printers"
readme = "README.md"
license = { text = "GPL" }
authors = [
    { name = "Philipp Klaus", email = "philipp.l.klaus@web.de" },
    { name = "Ben Burwood", email = "ben.burwood@outlook.com" }
]
dependencies = [
    "click==8.1.7",
    "colorama==0.4.6",
    "mypy-extensions==1.0.0",
    "packaging==24.2",
    "packbits==0.6",
    "pathspec==0.12.1",
    "pillow==11.0.0",
    "platformdirs==4.3.6",
    "pyusb==1.2.1"
]

[project.scripts]
brother_ql = "brother_label_printer_control_ql.cli.__init__:cli"
brother_ql_analyse = "brother_label_printer_control_ql.cli.legacy.brother_ql_analyse:main"
brother_ql_create = "brother_label_printer_control_ql.cli.legacy.brother_ql_create:main"
brother_ql_print = "brother_label_printer_control_ql.cli.legacy.brother_ql_print:main"
brother_ql_debug = "brother_label_printer_control_ql.cli.legacy.brother_ql_debug:main"
brother_ql_info = "brother_label_printer_control_ql.cli.legacy.brother_ql_info:main"
